<resources>
    <string name="app_name">Donde Rodri Delivery</string>

    <string name="login_options">¿No tienes una cuenta?</string>
    <string name="placeholder_user">Correo electrónico</string>
    <string name="placeholder_pass">Contraseña</string>
    <string name="placeholder_orden">Aquí aparecerá tu orden.</string>
    <string name="placeholder_total">Aquí aparecerá tu total.</string>

    <string name="btn_login">Ingresar</string>
    <string name="btn_signUp">Registrarse</string>
    <string name="btn_google">Ingresar con Google</string>
    <string name="btn_logOff">Cerrar sesión</string>
    <string name="btn_comprar">Realizar compra</string>
    <string name="btn_añadir">Añadir</string>
    <string name="btn_quitar">Quitar</string>
    <string name="btn_confirm">Confirmar orden</string>
    <string name="btn_volver">Regresar</string>
    <string name="login_title">Inicia sesión en tu cuenta</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Inicio</string>
    <string name="tab_text_2">Historial</string>
    <string name="tab_text_3">Ajustes</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"></string>
</resources>